--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -156,6 +156,7 @@
     <string name="view_logs">View Logs</string>
     <string name="export_logs">Export Logs</string>
     <string name="clear_logs">Clear Logs</string>
+    <string name="clear_logs_confirm">Are you sure you want to clear all logs? This cannot be undone.</string>
     <string name="logs_cleared">Logs cleared successfully</string>
     <string name="no_logs">No logs available</string>
     <string name="log_file_exported">Log file exported successfully</string>
