Версия 0.12.8: UI для просмотра/экспорта JSON и принудительного перевода
Добавлены кнопки в меню сессии в истории:
- "Просмотр/Экспорт JSON" - показывает диалог с JSON данными сессии
  - Отображает все данные включая переводы (name_en, name_ru, name_zh, notes_*)
  - JSON форматирован с отступами для удобного чтения
  - Текст можно выделить и скопировать
  - Кнопка "Копировать" копирует JSON в буфер обмена
  - Использует моноширинный шрифт для JSON

- "Принудительный перевод" - запускает перевод названия и заметок
  - Показывает диалог подтверждения
  - Вызывает forceTranslateSession() из ViewModel
  - Показывает Toast с сообщением о завершении
  - Переводит на все языки (EN, RU, ZH)

Технические изменения:
- Добавлены параметры onExportJson и onForceTranslate в SessionItem
- Добавлены state переменные showJsonDialog и showTranslateConfirmDialog
- Добавлены два новых диалога с использованием AlertDialog
- JSON диалог использует SelectionContainer для копирования текста
- LaunchedEffect загружает JSON данные асинхронно

Строковые ресурсы добавлены для всех языков:
- export_session_json, session_json_data
- force_translate, translation_started, translation_complete
- copy (для кнопки копирования)

Версия обновлена до 0.12.8 (versionCode 44)

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -32,6 +32,7 @@
     <string name="clear_filter">Очистить фильтр</string>
     <string name="all_sessions">Все сессии</string>
     <string name="close">Закрыть</string>
+    <string name="copy">Копировать</string>
     <string name="save">Сохранить</string>
     <string name="cancel">Отмена</string>
 
@@ -49,8 +50,15 @@
     <string name="export_history">Экспорт истории</string>
     <string name="export_csv">Экспорт в CSV</string>
     <string name="export_json">Экспорт в JSON</string>
+    <string name="export_session_json">Просмотр/Экспорт JSON</string>
     <string name="export_success">История успешно экспортирована</string>
     <string name="export_error">Ошибка экспорта истории</string>
+    <string name="session_json_data">JSON данные сессии</string>
+
+    <!-- Translation -->
+    <string name="force_translate">Принудительный перевод</string>
+    <string name="translation_started">Перевод начат</string>
+    <string name="translation_complete">Перевод завершен</string>
 
     <!-- About dialog -->
     <string name="about">О программе</string>
