--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -32,6 +32,7 @@
     <string name="clear_filter">清除筛选</string>
     <string name="all_sessions">所有记录</string>
     <string name="close">关闭</string>
+    <string name="copy">复制</string>
     <string name="save">保存</string>
     <string name="cancel">取消</string>
 
@@ -49,8 +50,15 @@
     <string name="export_history">导出历史</string>
     <string name="export_csv">导出为 CSV</string>
     <string name="export_json">导出为 JSON</string>
+    <string name="export_session_json">查看/导出 JSON</string>
     <string name="export_success">历史记录导出成功</string>
     <string name="export_error">导出历史记录时出错</string>
+    <string name="session_json_data">会话 JSON 数据</string>
+
+    <!-- Translation -->
+    <string name="force_translate">强制翻译</string>
+    <string name="translation_started">翻译已开始</string>
+    <string name="translation_complete">翻译已完成</string>
 
     <!-- About dialog -->
     <string name="about">关于</string>
