Версия 0.13.0: Фильтр периодов для графиков
Добавлена фильтрация по временным периодам:
- Создан enum TimePeriod с тремя значениями:
  - ALL_TIME: все время (без фильтрации)
  - LAST_7_DAYS: последние 7 дней
  - LAST_30_DAYS: последние 30 дней

ChartsViewModel изменения:
- Добавлен StateFlow selectedPeriod для выбранного периода
- Добавлен метод selectPeriod(period: TimePeriod)
- loadChartData теперь фильтрует сессии по startTime >= periodStartTime
- Логирование включает информацию о фильтрации

ChartsScreen UI изменения:
- Добавлена кнопка выбора периода в TopAppBar (слева от селектора названия)
- Добавлен диалог выбора периода с тремя опциями
- Текущий период отображается на кнопке жирным шрифтом
- Кнопки периодов и названий уменьшены (padding: 4dp вместо 8dp)

Строковые ресурсы добавлены для всех языков:
- period_all_time: "All time" / "Все время" / "所有时间"
- period_last_7_days: "Last 7 days" / "Последние 7 дней" / "最近 7 天"
- period_last_30_days: "Last 30 days" / "Последние 30 дней" / "最近 30 天"

Технические детали:
- TimePeriod.getStartTimeMillis() возвращает null для ALL_TIME
- Фильтрация: allSessions.filter { it.startTime >= periodStartTime }
- Сохранение состояния периода между переключениями названий
- Автоматическое обновление графиков при смене периода

Версия обновлена до 0.13.0 (versionCode 46)

Примечание: Пунктирные линии средних значений не реализованы
(требуют расширенной работы с библиотекой Vico).

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -87,6 +87,11 @@
     <string name="no_sessions_with_names">Не найдено сессий с названиями. Добавьте названия к сессиям во вкладке История, чтобы просмотреть графики.</string>
     <string name="no_data_for_chart">Недостаточно данных для отображения графика. Требуется минимум 2 круга на сессию.</string>
     <string name="average_lap_time">Среднее время круга</string>
+
+    <!-- Time periods -->
+    <string name="period_all_time">Все время</string>
+    <string name="period_last_7_days">Последние 7 дней</string>
+    <string name="period_last_30_days">Последние 30 дней</string>
     <string name="median_lap_time">Медиана времени круга</string>
     <string name="statistics_summary">Сводная статистика</string>
     <string name="total_sessions">Всего сессий</string>
