Версия 0.13.3: Улучшения выбора языка и статистики
Изменения:
1. Выбор языка: теперь можно кликать на название языка, не только на кружочек
   - Добавлен clickable модификатор на всю строку
   - Улучшена область клика для удобства пользователя

2. Графики - сводная статистика:
   - Добавлена средняя длительность (overallAverageDuration)
   - Общее среднее и медиана показываются только если есть круги (> 0)
   - Добавлены строки в локализацию: average_duration

Файлы:
- AboutDialog.kt: clickable на Row для выбора языка
- ChartsScreen.kt: средняя длительность + условное отображение
- strings.xml (en, ru, zh): average_duration

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -95,6 +95,7 @@
     <string name="median_lap_time">Медиана времени круга</string>
     <string name="statistics_summary">Сводная статистика</string>
     <string name="total_sessions">Всего сессий</string>
+    <string name="average_duration">Средняя длительность</string>
     <string name="overall_average">Общее среднее</string>
     <string name="overall_median">Общая медиана</string>
 
