Исправлена миграция на Vico 2.1.3 с пунктирными линиями
- Добавлены недостающие строковые ресурсы (EN, RU, ZH)
- Использован правильный API: LineProvider.series() вместо списков
- Создана функция rememberDashedLine() с DashPathEffect
- Исправлена обработка nullable типов chartData
- Исправлен DropdownMenu: forEach вместо LazyListScope.items
- Исправлены типы в valueFormatter: value.toDouble()
- Использован DynamicShader.verticalGradient для градиентов

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -98,6 +98,12 @@
     <string name="average_duration">Средняя длительность</string>
     <string name="overall_average">Общее среднее</string>
     <string name="overall_median">Общая медиана</string>
+    <string name="total_duration">Общая длительность</string>
+    <string name="average_lap">Средний круг</string>
+    <string name="median_lap">Медиана круга</string>
+    <string name="all_names">Все названия</string>
+    <string name="no_data">Нет данных</string>
+    <string name="summary_statistics">Сводная статистика</string>
 
     <!-- Toggle buttons descriptions -->
     <string name="toggle_buttons">Кнопки переключения</string>
