--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -77,7 +77,7 @@
 
     <!-- Statistics -->
     <string name="avg">СРЕДН</string>
-    <string name="median">МЕДИАНА</string>
+    <string name="median">СЕРЕДИНА</string>
     <string name="duration">Длительность</string>
 
     <!-- Charts screen -->
@@ -92,18 +92,21 @@
     <string name="period_all_time">Все время</string>
     <string name="period_last_7_days">Последние 7 дней</string>
     <string name="period_last_30_days">Последние 30 дней</string>
-    <string name="median_lap_time">Медиана времени круга</string>
+    <string name="median_lap_time">Середина времени круга</string>
     <string name="statistics_summary">Сводная статистика</string>
     <string name="total_sessions">Всего сессий</string>
     <string name="average_duration">Средняя длительность</string>
     <string name="overall_average">Общее среднее</string>
-    <string name="overall_median">Общая медиана</string>
+    <string name="overall_median">Общая середина</string>
     <string name="total_duration">Общая длительность</string>
     <string name="average_lap">Средний круг</string>
-    <string name="median_lap">Медиана круга</string>
+    <string name="median_lap">Середина круга</string>
     <string name="all_names">Все названия</string>
     <string name="no_data">Нет данных</string>
     <string name="summary_statistics">Сводная статистика</string>
+    <string name="statistics_info">Статистика</string>
+    <string name="average_description">Среднее арифметическое всех времен кругов</string>
+    <string name="middle_description">Среднее значение между минимальным и максимальным временем круга</string>
 
     <!-- Toggle buttons descriptions -->
     <string name="toggle_buttons">Кнопки переключения</string>
