--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -77,7 +77,7 @@
 
     <!-- Statistics -->
     <string name="avg">平均</string>
-    <string name="median">中位数</string>
+    <string name="median">中点</string>
     <string name="duration">时长</string>
 
     <!-- Charts screen -->
@@ -92,18 +92,21 @@
     <string name="period_all_time">所有时间</string>
     <string name="period_last_7_days">最近 7 天</string>
     <string name="period_last_30_days">最近 30 天</string>
-    <string name="median_lap_time">中位数计次时间</string>
+    <string name="median_lap_time">中点计次时间</string>
     <string name="statistics_summary">统计摘要</string>
     <string name="total_sessions">总记录数</string>
     <string name="average_duration">平均时长</string>
     <string name="overall_average">总平均值</string>
-    <string name="overall_median">总中位数</string>
+    <string name="overall_median">总中点</string>
     <string name="total_duration">总时长</string>
     <string name="average_lap">平均计次</string>
-    <string name="median_lap">中位数计次</string>
+    <string name="median_lap">中点计次</string>
     <string name="all_names">所有名称</string>
     <string name="no_data">无数据</string>
     <string name="summary_statistics">统计摘要</string>
+    <string name="statistics_info">统计信息</string>
+    <string name="average_description">所有计次时间的算术平均值</string>
+    <string name="middle_description">最小和最大计次时间之间的中间值</string>
 
     <!-- Toggle buttons descriptions -->
     <string name="toggle_buttons">切换按钮</string>
