Версия 0.14.0: режим скрытия времени во время работы
Новая функция - скрытие времени во время работы секундомера:
- Добавлена настройка hideTimeWhileRunning в PreferencesManager
- Добавлен toggle button с иконкой VisibilityOff на экране секундомера
- Когда включено и секундомер работает, вместо времени показывается плейсхолдер "••:••:••"
- Двоеточие мигает каждую секунду (показывается/скрывается)
- Полезно для приватности или концентрации - пользователь не видит время, но знает что секундомер работает
- Добавлены строковые ресурсы на EN, RU, ZH
- Добавлено описание в About dialog

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -118,6 +118,7 @@
     <string name="toggle_orientation_desc">Блокировать ориентацию экрана</string>
     <string name="toggle_invert_colors_desc">Инвертировать цвета кругов (быстрее/медленнее)</string>
     <string name="toggle_dim_brightness_desc">Сохранять яркость (применяется когда экран удерживается в режимах RUNNING/ALWAYS; включено: сохранять системную яркость, выключено: уменьшать до 10% после таймаута)</string>
+    <string name="toggle_hide_time_desc">Скрывать время во время работы (показывает мигающий плейсхолдер вместо времени для приватности/концентрации)</string>
 
     <!-- Backup screen -->
     <string name="backup">Резервные копии</string>
