--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -118,6 +118,7 @@
     <string name="toggle_orientation_desc">锁定屏幕方向</string>
     <string name="toggle_invert_colors_desc">反转计次颜色（快/慢）</string>
     <string name="toggle_dim_brightness_desc">保持亮度（适用于RUNNING/ALWAYS模式屏幕保持开启时；启用：保持系统亮度，禁用：超时后降至10%）</string>
+    <string name="toggle_hide_time_desc">运行时隐藏时间（显示闪烁占位符而不是实际时间，用于隐私/专注）</string>
 
     <!-- Backup screen -->
     <string name="backup">备份</string>
