Версия 0.15.0: учёт полного времени с паузами
Основные изменения:

1. Учёт полного времени (elapsed time):
   - SessionEntity: добавлены свойства elapsedTime и pauseTime
   - Полное время = endTime - startTime (включает все паузы)
   - Активное время = totalDuration (без пауз)

2. История сессий:
   - В карточке отображаются оба времени
   - В таблице отображается полное время
   - Показывается время пауз, если > 0

3. График Total Duration (переименован в Active & Elapsed Time):
   - Три линии на одном графике:
     * Синяя с градиентом: активное время (без пауз)
     * Голубая сплошная: полное время (с паузами)
     * Тёмно-синяя пунктирная: среднее активное время
   - Позволяет визуально оценить влияние пауз

4. Отображение версии:
   - Номер версии показывается внизу экрана рядом с названием
   - Формат: "LapLog Free 0.15.0"

5. Строковые ресурсы (EN/RU/ZH):
   - active_time: учёт активного времени
   - elapsed_time: учёт полного времени
   - pause_time: время пауз

Версия: 0.14.1 -> 0.15.0 (versionCode: 56 -> 57)

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -79,6 +79,9 @@
     <string name="avg">СРЕДН</string>
     <string name="median">СЕРЕДИНА</string>
     <string name="duration">Длительность</string>
+    <string name="active_time">Активное время</string>
+    <string name="elapsed_time">Полное время</string>
+    <string name="pause_time">Паузы</string>
 
     <!-- Charts screen -->
     <string name="charts">Графики</string>
@@ -98,7 +101,7 @@
     <string name="average_duration">Средняя длительность</string>
     <string name="overall_average">Общее среднее</string>
     <string name="overall_median">Общая середина</string>
-    <string name="total_duration">Общая длительность</string>
+    <string name="total_duration">Активное и полное время</string>
     <string name="average_lap">Средний круг</string>
     <string name="median_lap">Середина круга</string>
     <string name="all_names">Все названия</string>
